Bug 423153 - Options of dropdown are not entirely readable in Web Shortcuts kcm opened via Krunner kcm
Summary: Options of dropdown are not entirely readable in Web Shortcuts kcm opened via...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 417273 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-06-18 12:29 UTC by Patrick Silva
Modified: 2020-06-19 19:30 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.20
Sentry Crash Report:


Attachments
screenshot (150.15 KB, image/png)
2020-06-18 12:29 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-06-18 12:29:21 UTC
Created attachment 129471 [details]
screenshot

STEPS TO REPRODUCE
1. open system settings > search > krunner
2. search for "web"
3. click on "Configure" button of Web Shortcuts
4. open "Default web shortcut" dropdown

OBSERVED RESULT
no option is entirely readable. See the attached screenshot please.

EXPECTED RESULT
all options should be entirely readable.

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.19.80
KDE Frameworks Version: 5.72.0
Qt Version: 5.14.2
Comment 1 Bug Janitor Service 2020-06-18 21:05:00 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/55
Comment 2 Nate Graham 2020-06-19 14:27:30 UTC
Git commit 46b825fcddb47a604752e9befe15fdff7e4dda47 by Nate Graham, on behalf of Alexander Lohnau.
Committed on 19/06/2020 at 14:27.
Pushed by ngraham into branch 'master'.

Ensure readability of webshortcuts KCM by setting minimum width

M  +1    -0    src/kcms/webshortcuts/main.cpp

https://invent.kde.org/frameworks/kio/commit/46b825fcddb47a604752e9befe15fdff7e4dda47
Comment 3 Alexander Lohnau 2020-06-19 19:30:33 UTC
*** Bug 417273 has been marked as a duplicate of this bug. ***