Ensure readability of webshortcuts KCM by setting minimum width

BUG: 423153